# summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  hello.py  main.py  pyproject.toml
e2e/: check.http
routers/: __init__.py  discord_messages.py  summary_messages.py
services/: discord_service.py  misskey_service.py  missky_service.py
src/: main.py
src/routers/: discord_messages.py  rss_messages.py  summary_messages.py
src/services/: ai_service.py  discord_service.py  misskey_service.py  rss_service.py
src/utils/: __init__.py  url_validator.py
tests/services/: test_ai_service.py
tests/test_utils/: test_url_validator.py
